styles.css
*{
    padding: 0;
    margin: 0;
    background-origin: padding-box;
    font-family: 'Poppins', sans-serif;
}

html{
    font-size: 18px;
    background-color: #3d3c3c;
}

.calculator{
    display: flex; 
    flex-direction: column;
    justify-content: center; 
    align-items: center;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    width: 625px;
    height: 925px;

    background-color: #1d1c29;
    border-radius: 20px;
    
}

.container{
    background-color: #1d1c29;

    width: 600px;
    height: 850px;

    border-radius: 2.5%;
}

.output{
    margin: 0 auto;
    
    background-color: #b6c4b5;
    border-radius: 10px;
    width: 97%;
}  

.operation{
    width: 600px;
    height: 100px;

    color: rgb(0, 0, 0)000;

    font-size: 2.5em;
    font-weight: bold;

    position: relative;
    overflow: hidden;
}

.operation .value{

    white-space: nowrap;
    overflow: hidden;
}

.result{
    
    width: 600px;
    height: 65px;

    color: #272727;
    
    font-size: 1.8em;
    font-weight: bold;
    
    overflow: hidden;
    position: relative;
}

.result .value{
    position: absolute;

    top: 50%;
    transform: translateY(-50%);
    right : 30px;
    
    white-space: nowrap;
    overflow: hidden;
}


.input{
    background-color: #1d1c29;

    border-radius: 0 0 25px 25px;
    border: 1px solid #1d1d1d;
    height: 600px;
}

.row {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.row button{
    width: 100px;
    height: 50px;

    font-size: 1.5em;

    color: rgb(226, 226, 226);
    border-radius: 10%;
    margin : 8px;

    cursor: pointer;
}

.row #calculate{
    color: #FFF;
    background-color: #46e0bc;
    width : 121px;
    border-radius: 50px;
}
.row #delete{
    color: #FFF;
    background-color: #e05046;
}

#division, #multiplication, #subtraction, #addition {
    color: #18b893;
}

.input button span{
    font-size: 0.6em;
    position: absolute;
}

.active-angle{
    background-color: #1d1d1d !important;
    color: #FFF !important;
    border-radius: 10px !important;
}

.top button{
    background-color: #434153;
}

.btm button{
    background-color: #1d1c29;
}

.btm .row .warn{
    background-color: #e05046;
}

.row button:hover{
    background-color: #e2b8b883;
}

.btm .row .warn:hover{
    background-color: #3a1512;
}

.modes{
    height: 20px;
    background-color: transparent;
    margin: 5px;
    padding-left: 10px;
    color: rgb(190, 148, 70);
    display:flex
}

.modes h2{
    padding-right: 30px;
}

.scrollable{
    width: 585px;
    
    background-color: transparent;
    white-space: nowrap;
    overflow-x: auto; 
}

.display{
    height: 100%;
    width: 585px;
    background-color: transparent;
    border: none;
    overflow-x: auto; 
    font-size: larger;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

